syntax = "proto3";

option csharp_namespace = "GrpcEmailService";

import "google/protobuf/empty.proto";

package email;

service EmailSender {
  rpc SendEmail (EmailRequest) returns (EmailResponse);
}
// các số trong trường này được gọi là các số định danh (trong documentation)
message EmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}

message EmailResponse {
  string message = 1;
}

